// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree.svelte > should add custom root node 1`] = `
<body>
  <div>
    <tree
      class=""
      tabindex="0"
    >
      <nested-list
        class="flex flex-col w-full list"
        role="listbox"
        tabindex="-1"
      >
        <node
          aria-selected="false"
          class="min-h-5 flex flex-row cursor-pointer select-none items-center"
          data-path="0"
          id="id-0"
          role="option"
        >
          <icon
            aria-label="collapse"
            class="flex flex-shrink-0 items-center justify-center small w-4"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-opened"
            />
          </icon>
          
           
          <item>
            
             
            <p
              class="w-full flex"
            >
              root
            </p>
            
          </item>
        </node>
         
        <nested-list
          class="flex flex-col w-full list"
          role="listbox"
          tabindex="-1"
        >
          <node
            aria-selected="false"
            class="min-h-5 flex flex-row cursor-pointer select-none items-center"
            data-path="0,0"
            id="id-0-0"
            role="option"
          >
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-child"
            >
              <i
                class="col-span-1 row-span-2 border-r"
              />
               
              <i
                class="border-b"
              />
              
            </span>
            
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
            />
            
             
            <item>
              
               
              <p
                class="w-full flex"
              >
                a
              </p>
              
            </item>
          </node>
           
          
          <node
            aria-selected="false"
            class="min-h-5 flex flex-row cursor-pointer select-none items-center"
            data-path="0,1"
            id="id-0-1"
            role="option"
          >
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
            >
              <i
                class="border-r"
              />
               
              <i
                class="border-b"
              />
              
            </span>
            
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
            />
            
             
            <item>
              
               
              <p
                class="w-full flex"
              >
                a
              </p>
              
            </item>
          </node>
           
          
        </nested-list>
        
      </nested-list>
    </tree>
  </div>
</body>
`;

exports[`Tree.svelte > should add root node when input has more than one item 1`] = `
<body>
  <div>
    <tree
      class=""
      tabindex="0"
    >
      <nested-list
        class="flex flex-col w-full list"
        role="listbox"
        tabindex="-1"
      >
        <node
          aria-selected="false"
          class="min-h-5 flex flex-row cursor-pointer select-none items-center"
          data-path="0"
          id="id-0"
          role="option"
        >
          <icon
            aria-label="collapse"
            class="flex flex-shrink-0 items-center justify-center small w-4"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-opened"
            />
          </icon>
          
           
          <item>
            
             
            
          </item>
        </node>
         
        <nested-list
          class="flex flex-col w-full list"
          role="listbox"
          tabindex="-1"
        >
          <node
            aria-selected="false"
            class="min-h-5 flex flex-row cursor-pointer select-none items-center"
            data-path="0,0"
            id="id-0-0"
            role="option"
          >
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-child"
            >
              <i
                class="col-span-1 row-span-2 border-r"
              />
               
              <i
                class="border-b"
              />
              
            </span>
            
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
            />
            
             
            <item>
              
               
              <p
                class="w-full flex"
              >
                a
              </p>
              
            </item>
          </node>
           
          
          <node
            aria-selected="false"
            class="min-h-5 flex flex-row cursor-pointer select-none items-center"
            data-path="0,1"
            id="id-0-1"
            role="option"
          >
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
            >
              <i
                class="border-r"
              />
               
              <i
                class="border-b"
              />
              
            </span>
            
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
            />
            
             
            <item>
              
               
              <p
                class="w-full flex"
              >
                a
              </p>
              
            </item>
          </node>
           
          
        </nested-list>
        
      </nested-list>
    </tree>
  </div>
</body>
`;

exports[`Tree.svelte > should render empty tree 1`] = `
<body>
  <div>
    <tree
      class=""
      tabindex="0"
    >
      <nested-list
        class="flex flex-col w-full list"
        role="listbox"
        tabindex="-1"
      />
    </tree>
  </div>
</body>
`;

exports[`Tree.svelte > should render nested tree 1`] = `
<body>
  <div>
    <tree
      class=""
      tabindex="0"
    >
      <nested-list
        class="flex flex-col w-full list"
        role="listbox"
        tabindex="-1"
      >
        <node
          aria-selected="false"
          class="min-h-5 flex flex-row cursor-pointer select-none items-center"
          data-path="0"
          id="id-0"
          role="option"
        >
          <icon
            aria-label="expand"
            class="flex flex-shrink-0 items-center justify-center small w-4"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-closed"
            />
          </icon>
          
           
          <item>
            
             
            <p
              class="w-full flex"
            >
              a
            </p>
            
          </item>
        </node>
         
        
      </nested-list>
    </tree>
  </div>
</body>
`;

exports[`Tree.svelte > should render single node tree 1`] = `
<body>
  <div>
    <tree
      class=""
      tabindex="0"
    >
      <nested-list
        class="flex flex-col w-full list"
        role="listbox"
        tabindex="-1"
      >
        <node
          aria-selected="false"
          class="min-h-5 flex flex-row cursor-pointer select-none items-center"
          data-path="0"
          id="id-0"
          role="option"
        >
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
          />
          
           
          <item>
            
             
            <p
              class="w-full flex"
            >
              a
            </p>
            
          </item>
        </node>
         
        
      </nested-list>
    </tree>
  </div>
</body>
`;

exports[`Tree.svelte > should render using custom field mappings 1`] = `
<body>
  <div>
    <tree
      class=""
      tabindex="0"
    >
      <nested-list
        class="flex flex-col w-full list"
        role="listbox"
        tabindex="-1"
      >
        <node
          aria-selected="false"
          class="min-h-5 flex flex-row cursor-pointer select-none items-center"
          data-path="0"
          id="id-0"
          role="option"
        >
          <icon
            aria-label="collapse"
            class="flex flex-shrink-0 items-center justify-center small w-4"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="node-opened"
            />
          </icon>
          
           
          <item>
            
             
            
          </item>
        </node>
         
        <nested-list
          class="flex flex-col w-full list"
          role="listbox"
          tabindex="-1"
        >
          <node
            aria-selected="false"
            class="min-h-5 flex flex-row cursor-pointer select-none items-center"
            data-path="0,0"
            id="id-0-0"
            role="option"
          >
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-child"
            >
              <i
                class="col-span-1 row-span-2 border-r"
              />
               
              <i
                class="border-b"
              />
              
            </span>
            
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
            />
            
             
            <item>
              
               
              <p
                class="w-full flex"
              >
                a
              </p>
              
            </item>
          </node>
           
          
          <node
            aria-selected="false"
            class="min-h-5 flex flex-row cursor-pointer select-none items-center"
            data-path="0,1"
            id="id-0-1"
            role="option"
          >
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
            >
              <i
                class="border-r"
              />
               
              <i
                class="border-b"
              />
              
            </span>
            
            <span
              class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
            />
            
             
            <item>
              
               
              <p
                class="w-full flex"
              >
                a
              </p>
              
            </item>
          </node>
           
          
        </nested-list>
        
      </nested-list>
    </tree>
  </div>
</body>
`;
